Removed the 'Enable-Native-Access' command line option because  the same manifest attribute had already been added.